apps/web/src/app/(docs)/docs/sdk-reference/python-sdk/v2.3.0/template_async/page.mdx





## AsyncTemplate

```python
class AsyncTemplate(TemplateBase)
```

Asynchronous template builder for VDESKSK sandboxes.


### build

```python
@staticmethod
async def build(template: TemplateClass,
                alias: str,
                cpu_count: int = 2,
                memory_mb: int = 1024,
                skip_cache: bool = False,
                on_build_logs: Optional[Callable[[LogEntry], None]] = None,
                api_key: Optional[str] = None,
                domain: Optional[str] = None) -> None
```

Build and deploy a template to VDESKSK infrastructure.

**Arguments**:

- `template`: The template to build
- `alias`: Alias name for the template
- `cpu_count`: Number of CPUs allocated to the sandbox
- `memory_mb`: Amount of memory in MB allocated to the sandbox
- `skip_cache`: If True, forces a complete rebuild ignoring cache
- `on_build_logs`: Callback function to receive build logs during the build process
- `api_key`: VDESKSK API key for authentication
- `domain`: Domain of the VDESKSK API
Example
```python
from vdesk import AsyncTemplate

template = (
    AsyncTemplate()
    .from_python_image('3')
    .copy('requirements.txt', '/home/user/')
    .run_cmd('pip install -r /home/user/requirements.txt')
)

await AsyncTemplate.build(
    template,
    alias='my-python-env',
    cpu_count=2,
    memory_mb=1024
)
```

